# qt-arm64-cross

./: .gitignore  README.md  build_exe.ps1  run.py  selfcheck.py
crosskit/: __init__.py  build.py  detect.py  envpack.py  httpshare.py  netip.py  settings.py  wsl.py  wsl_setup.py
examples/hello_cmake/: CMakeLists.txt  main.cpp
examples/hello_qmake/: hello_qmake.pro  main.cpp
gui/: __init__.py  app.py  chrome.py  theme.py
tools/: build_qt5142_arm64_cross.sh  bundle.sh  cross_build.sh  ensure_focal_rootfs.sh  env_check.sh  setup_cross_focal.sh  update_sysroot_xcb_deps.sh
tools/cmake/: aarch64-focal-toolchain.cmake
tools/qmake/linux-aarch64-focal/: qmake.conf  target-qt.conf
